<resources>
	<string name="app_name">Entry</string>
	<string name="navigation_drawer_close">Close Navigation Drawer</string>
	<string name="nav_header_title">Entry Community</string>
	<string name="nav_header_subtitle">408 Electronic Studio</string>
	<string name="nav_header_desc">Professor Liu team, 5 years of project development experience</string>
	<string name="action_settings">Settings</string>

	<string name="menu_home">Home</string>
	<string name="menu_serial_assistant">Serial Port Assistant</string>
	<string name="menu_oscilloscope">Oscilloscope</string>
	<string name="lan_as_client_label">As TCP Client</string>
	<string name="lan_as_server_label">As TCP Server</string>
	<string name="menu_connect">Connection</string>
	<string name="start_connect">Start Connection</string>
	<string name="stop_connect">Stop Connection</string>
	<string name="text_home">Let\'s configure the connection properties now</string>
	<string name="server_ip_address">Server IP Address</string>
	<string name="server_port">Server Port</string>
	<string name="switch_to_landscape">Switch to Landscape View</string>
	<string name="switch_to_portrait">Switch to Portrait View</string>
	<string name="clear_message">Clear All</string>
	<string name="unconnected_server_info">No Connection Now</string>
	<string name="that_has_disconnected">The other party has been disconnected</string>
	<string name="functional_navigation">Functional Navigation</string>
	<string name="press_again_to_exit">Press again to exit</string>
	<string name="please_input_ip_address">Please fill in the IP address field correctly</string>
	<string name="please_input_port">Please fill in the port field correctly</string>
	<string name="navigation_drawer_open">Open Navigation Drawer</string>
	<string name="test_description" translatable="false">杰哥不要啊</string>
	<string name="test_step" translatable="false">Super Idol 的笑容都没你的甜</string>
	<string name="open_client_error">Connection closed, incorrect address entered or the other party does not open the server</string>
	<string name="open_client_successful">Connect successful</string>
	<string name="auto_clear_send">Automatically Clear Sending Text</string>
	<string name="waveform_dataset">Waveform</string>
	<string name="no_chart_data_available">No chart data available</string>
	<string name="ensure_clear_all">Are you sure you want to clear all?</string>
	<string name="button_ok">OK</string>
	<string name="button_cancel">Cancel</string>
	<string name="uncaught_wifi_connect">Not Connected to WLAN</string>
	<string name="uncaught_wifi_connect_info">Not currently connected to WLAN. Please try to connect and use this app. Do you want to connect now?</string>
	<string name="to_connect">To Connect</string>
	<string name="test_a">Test A: Distortion</string>
	<string name="measure_signal_frequency">Measure Signal Frequency</string>
	<string name="thd">THD</string>
	<string name="um1">Um1</string>
	<string name="um2">Um2=Um2/Um1</string>
	<string name="um3">Um3=Um3/Um1</string>
	<string name="um4">Um4=Um4/Um1</string>
	<string name="um5">Um5=Um5/Um1</string>
	<string name="hz" translatable="false">kHz</string>
	<string name="percent" translatable="false">%</string>
	<string name="mvpp" translatable="false">mVpp</string>
	<string name="spectrum_dataset">Sectrum Dataset</string>
	<string name="no_wave_data_available">No wave data available</string>
	<string name="no_spectrum_data_available">No spectrum data available</string>
	<string name="entry">Entry</string>
</resources>