<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	tools:showIn="navigation_view">

	<group android:checkableBehavior="single">
		<item
			android:enabled="false"
			android:title="@string/nav_header_desc"
			android:visible="false" />
		<item
			android:id="@+id/menu_functional"
			android:title="@string/functional_navigation">
			<menu>
				<item
					android:id="@+id/nav_home"
					android:checked="true"
					android:icon="@drawable/ic_baseline_wifi_24"
					android:title="@string/menu_connect" />
				<item
					android:id="@+id/nav_serial_assistant"
					android:icon="@drawable/ic_baseline_chat_24"
					android:title="@string/menu_serial_assistant"
					android:visible="false" />
				<item
					android:id="@+id/nav_oscilloscope"
					android:icon="@drawable/ic_baseline_show_chart_24"
					android:title="@string/menu_oscilloscope" />
			</menu>
		</item>
	</group>
</menu>