<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/switch_to_landscape"
        android:checkable="true"
        android:checked="false"
        android:icon="@drawable/ic_baseline_screen_rotation_24"
        android:title="@string/switch_to_landscape" />
    <item
        android:id="@+id/action_clrMsg"
        android:title="@string/clear_message"
        android:visible="false" />
    <item
        android:id="@+id/action_autoClrSend"
        android:checkable="true"
        android:checked="true"
        android:title="@string/auto_clear_send"
        android:visible="false" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:visible="false"
        app:showAsAction="never" />
</menu>