<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fitsSystemWindows="true"
	tools:context=".MainActivity">

	<com.google.android.material.appbar.AppBarLayout
		android:id="@+id/appbar"
		android:layout_width="match_parent"
		android:layout_height="@dimen/nav_header_height"
		android:fitsSystemWindows="true"
		android:textAlignment="viewStart"
		android:theme="@style/Theme.Entry.AppBarOverlay"
		android:translationZ="15dp">

		<com.google.android.material.appbar.CollapsingToolbarLayout
			android:id="@+id/collapsing_toolbar"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:textAlignment="viewStart"
			android:textDirection="firstStrongRtl"
			app:contentScrim="?attr/colorPrimary"
			app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
			app:toolbarId="@+id/toolbar">

			<!--<ImageSwitcher
				android:id="@+id/app_bar_image_switcher"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:contentDescription="@string/test_description"
				android:scaleType="centerCrop"
				android:scrollY="-30dp"
				app:layout_collapseMode="parallax"
				tools:ignore="HardcodedText" />-->

			<ImageView
				android:id="@+id/app_bar_image_secondary"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:contentDescription="@string/test_description"
				android:scaleType="centerCrop"
				android:src="@drawable/tjb_pretty"
				app:layout_collapseMode="parallax"
				tools:ignore="HardcodedText" />

			<ImageView
				android:id="@+id/app_bar_image"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:contentDescription="@string/test_description"
				android:scaleType="centerCrop"
				android:src="@drawable/tjb_original"
				app:layout_collapseMode="parallax"
				tools:ignore="HardcodedText" />

			<androidx.appcompat.widget.Toolbar
				android:id="@+id/toolbar"
				android:layout_width="match_parent"
				android:layout_height="?attr/actionBarSize"
				android:textAlignment="viewStart"
				app:layout_collapseMode="pin"
				app:popupTheme="@style/Theme.Entry.PopupOverlay"
				app:subtitleTextColor="@color/material_on_primary_emphasis_high_type"
				app:title="@string/nav_header_title"
				app:titleTextColor="@color/white" />

		</com.google.android.material.appbar.CollapsingToolbarLayout>
	</com.google.android.material.appbar.AppBarLayout>

	<include layout="@layout/content_main" />

	<com.google.android.material.floatingactionbutton.FloatingActionButton
		android:id="@+id/connectLanBtn"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="bottom|end"
		android:layout_margin="@dimen/fab_margin"
		android:contentDescription="@string/start_connect"
		android:translationZ="20dp"
		app:backgroundTint="?attr/colorError"
		app:srcCompat="@drawable/ic_baseline_link_off_24"
		app:tint="@color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>